feat: DB 적용